--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -6,28 +6,51 @@
 
     <div class="container">
 
-        <div class="card example-1 square scrollbar-cyan bordered-cyan mt-5 text-center">
+        <div class="mt-5 mb-2">
+            <form class="form-inline my-2 my-lg-0 mr-lg-5" method="post" action="{{ path('busqueda') }}">
+                <input name="descripcionIncidencia" class="form-control mr-sm-2 d-none d-sm-none d-md-none d-lg-block d-xl-block inputBuscarIncidencia" type="search" placeholder="Descripción..." aria-label="Buscar">
+                <input name="fechaHoraIncidencia" class="form-control mr-sm-2 d-none d-sm-none d-md-none d-lg-block d-xl-block inputBuscarIncidencia" type="datetime-local" placeholder="fecha o hora">
+                <select name="prioridadIncidencia" class="form-control mr-sm-2 d-none d-sm-none d-md-none d-lg-block d-xl-block inputBuscarIncidencia">
+                    <option selected >Prioridad</option>
+                    {% for prioridad in prioridades %}
+                        <option value="{{ prioridad.id }}">{{ prioridad.nombre }}</option>
+                    {% endfor %}
+                </select>
+                <select name="categoriaIncidencia" class="form-control mr-sm-2 d-none d-sm-none d-md-none d-lg-block d-xl-block inputBuscarIncidencia">
+                    <option selected >Categoría</option>
+                    {% for categoria in categorias %}
+                        <option value="{{ categoria.id }}">{{ categoria.nombre }}</option>
+                    {% endfor %}
+                </select>
+                <button id="botonBuscarIncidencia" name="buscarIncidencia" class="my-2 my-sm-0 text-md-center" type="submit"><i class='fas fa-search'></i></button>
+            </form>
+        </div>
+
+        <div class="card square scrollbar-cyan bordered-cyan mb-5 text-center bg-light tablaDatosIncidencia">
+
             <table class="table">
                 <thead class="black white-text">
                 <tr>
                     <th class="th-sm">Decripción breve</th>
-                    <th class="th-sm d-none d-sm-table-cell">Fecha</th>
+                    <th class="th-sm d-none d-sm-table-cell">Fecha y hora</th>
                     <th class="th-sm">Prioridad</th>
                     <th class="th-sm d-none d-sm-table-cell">Estado</th>
-                    <th class="th-sm d-none d-lg-table-cell">Categoria</th>
+                    <th class="th-sm d-none d-lg-table-cell">Categoría</th>
                     <th class="th-sm d-none d-lg-table-cell">Técnico</th>
                 </tr>
                 </thead>
                 <tbody id="tablaEventosBusqueda">
                 {% for incidencia in incidencias %}
                     <tr>
-                        <td>{{ incidencia.descripcion_breve }}</td>
-                        <td class="d-none d-sm-table-cell">{{ incidencia.fecha_hora|date("m/d/Y") }}</td>
+                        <td><a href="#">{{ incidencia.descripcion_breve }}</a></td>
+                        <td class="d-none d-sm-table-cell">{{ incidencia.fecha_hora|date("d/m/Y H:i") }}</td>
                         <td>{{ incidencia.prioridad }}</td>
                         <td class="d-none d-sm-table-cell">{{ incidencia.estado }}</td>
                         <td class="d-none d-lg-table-cell">{{ incidencia.categoria }}</td>
                         <td class="d-none d-lg-table-cell">{{ incidencia.tecnico }}</td>
                     </tr>
+                    {% else %}
+                        <tr><td colspan="6">No hay datos</td></tr>
                 {% endfor %}
                 </tbody>
 
