--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -6,24 +6,26 @@
 
     <div class="container">
 
-        <div class="mt-5 mb-2">
-            <form class="form-inline my-2 my-lg-0 mr-lg-5" method="post" action="{{ path('busqueda') }}">
-                <input name="descripcionIncidencia" class="form-control mr-sm-2 d-none d-sm-none d-md-none d-lg-block d-xl-block inputBuscarIncidencia" type="search" placeholder="Descripción..." aria-label="Buscar">
-                <input name="fechaHoraIncidencia" class="form-control mr-sm-2 d-none d-sm-none d-md-none d-lg-block d-xl-block inputBuscarIncidencia" type="datetime-local" placeholder="fecha o hora">
-                <select name="prioridadIncidencia" class="form-control mr-sm-2 d-none d-sm-none d-md-none d-lg-block d-xl-block inputBuscarIncidencia">
-                    <option selected >Prioridad</option>
+        <div class="row mt-5 mb-2">
+
+            <form class="col-12 form-inline my-lg-0 mr-lg-5 justify-content-center" method="post" action="{{ path('busqueda') }}">
+                <input name="descripcionIncidencia" class="form-control mr-sm-1 d-none d-sm-none d-md-none d-lg-block d-xl-block inputBuscarIncidencia" type="search" placeholder="Descripción..." aria-label="Buscar">
+                <input name="fechaIncidencia" class="form-control mr-sm-1 d-none d-sm-none d-md-none d-lg-block d-xl-block inputBuscarIncidencia" type="date" placeholder="fecha o hora">
+                <select name="prioridadIncidencia" class="form-control mr-sm-1 d-none d-sm-none d-md-none d-lg-block d-xl-block inputBuscarIncidencia">
+                    <option selected value="">Prioridad</option>
                     {% for prioridad in prioridades %}
                         <option value="{{ prioridad.id }}">{{ prioridad.nombre }}</option>
                     {% endfor %}
                 </select>
-                <select name="categoriaIncidencia" class="form-control mr-sm-2 d-none d-sm-none d-md-none d-lg-block d-xl-block inputBuscarIncidencia">
-                    <option selected >Categoría</option>
+                <select name="categoriaIncidencia" class="form-control mr-sm-1 d-none d-sm-none d-md-none d-lg-block d-xl-block inputBuscarIncidencia">
+                    <option selected value="">Categoría</option>
                     {% for categoria in categorias %}
                         <option value="{{ categoria.id }}">{{ categoria.nombre }}</option>
                     {% endfor %}
                 </select>
                 <button id="botonBuscarIncidencia" name="buscarIncidencia" class="my-2 my-sm-0 text-md-center" type="submit"><i class='fas fa-search'></i></button>
             </form>
+
         </div>
 
         <div class="card square scrollbar-cyan bordered-cyan mb-5 text-center bg-light tablaDatosIncidencia">
