--- a/templates/incidencia/nuevaIncidencia.html.twig
+++ b/templates/incidencia/nuevaIncidencia.html.twig
@@ -30,7 +30,7 @@
             </div>
             <div class="form-group">
                 <label for="categoriaNuevaIncidencia">Categoría</label>
-                <input type="text" id="categoriaNuevaIncidencia" name="nuevacategoriaNuevaIncidencia" class="form-control mb-1" placeholder="categoría">
+                <input type="text" id="categoriaNuevaIncidencia" name="nuevacategoriaNuevaIncidencia" class="form-control mb-1" placeholder="nueva categoría">
                 <select id="categoriaNuevaIncidencia" name="categoriaNuevaIncidencia" class="form-control">
                     {% for categoria in categorias %}
                         <option value="{{ categoria.id }}">{{ categoria.nombre }}</option>
@@ -40,6 +40,7 @@
             <div class="form-group">
                 <label for="tecnicoIncidencia">tecnico</label>
                 <select id="tecnicoIncidencia" name="tecnicoIncidencia" class="form-control">
+                    <option selected value="">Ninguno</option>
                     {% for tecnico in tecnicos %}
                         <option value="{{ tecnico.id }}">{{ tecnico.nombre }}</option>
                     {% endfor %}
