--- a/templates/indexTemplate.html.twig
+++ b/templates/indexTemplate.html.twig
@@ -32,7 +32,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="#">Estadísticas</a>
             </li>
-            {% if tipo == 'tecnico' %}
+            {% if tipo == 'empleado' or tipo == 'admin' %}
             <li class="nav-item">
                 <a class="nav-link" href="{{ path('ventanaNuevaIncidencia') }}">Añadir incidencias</a>
             </li>
